--- a/templates/authentication/signup.html
+++ b/templates/authentication/signup.html
@@ -30,7 +30,7 @@
     </a>
     <div class="or-seperator"><i>or</i></div>
     <form method="post" style="color:white;">
-      {% csrf_token %}
+      <!-- {% csrf_token %} -->
       {{form.as_p}}
       <button class="btn btn-success btn-block" type="submit">Sign Up</button>
     </form>
