--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -31,7 +31,7 @@
   </a>
   <div class="or-seperator"><i>or</i></div>
   <form method="post" style="color: white;">
-    <!-- {% csrf_token %} -->
+    {% csrf_token %}
     {{form.as_p}}
     <button class="btn btn-success btn-block" type="submit">Log In</button>
     <p></p>
